Fixed the image size and text spacing for the About page.

--- a/css/index.css
+++ b/css/index.css
@@ -502,7 +502,7 @@ address {
 @media (max-width: 500px) {
   .container .main-content .about-right {
     width: 100%;
-    padding: 1rem 0;
+    padding: 1rem;
   }
 }
 @media (max-width: 500px) {
@@ -512,19 +512,34 @@ address {
 }
 @media (max-width: 500px) {
   .container .main-content .about-right p {
-    padding: 1rem;
+    padding: 1rem 0;
   }
 }
 .container .main-content .about-right .card {
   margin: 1rem 0;
   display: flex;
 }
+@media (max-width: 500px) {
+  .container .main-content .about-right .card {
+    flex-direction: column;
+  }
+}
 .container .main-content .about-right .card p {
   margin: 0 1rem;
   font-size: 2rem;
 }
+@media (max-width: 500px) {
+  .container .main-content .about-right .card p {
+    margin: 0;
+  }
+}
 .container .main-content .about-right .card img {
   width: 35%;
+}
+@media (max-width: 500px) {
+  .container .main-content .about-right .card img {
+    width: 100%;
+  }
 }
 .container .main-content .products {
   width: 100%;
